# muteme-button-control-linux

./: .gitignore  .markdownlint.yaml  .mdl_style.rb  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  main.py  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/prune-uv-cache/: action.yml
.github/actions/restore-uv-cache/: action.yml
.github/chainguard/: main-semantic-release.sts.yaml
.github/workflows/: ci.yml  release.yml
config/: muteme.toml.example
config/udev/: 72-muteme-plugdev.rules  72-muteme-users.rules  99-muteme.rules
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
docs/reference/: muteme-official-linux-notes.md
docs/specs/01-spec-basic-toggle-control/: 01-spec-basic-toggle-control.md  01-tasks-basic-toggle-control.md
docs/specs/01-spec-basic-toggle-control/01-proofs/: 01-task-01-proofs.md  01-task-02-proofs.md  01-task-03-proofs.md  01-task-04-proofs.md  01-validation-report.md  02-task-02-proofs.md  03-task-03-proofs.md
docs/specs/02-spec-test-device-improvements/: 02-spec-test-device-improvements.md  02-tasks-test-device-improvements.md
docs/specs/02-spec-test-device-improvements/02-proofs/: 02-task-01-proofs.md  02-task-02-proofs.md  02-task-03-proofs.md  02-task-04-proofs.md
docs/specs/03-spec-f19-hold-to-talk-mode/: 03-spec-f19-hold-to-talk-mode.md
docs/specs/03-spec-f19-hold-to-talk-mode/03-proofs/: 03-validation-report.md
src/muteme_btn/: __init__.py  cli.py  config.py  main.py
src/muteme_btn/audio/: __init__.py  backends.py  coreaudio.py  pulse.py
src/muteme_btn/cli/: __init__.py  app.py
src/muteme_btn/cli/commands/: __init__.py  check_device.py  run.py  test_device.py  version.py
src/muteme_btn/cli/utils/: config_loader.py  device_helpers.py
src/muteme_btn/core/: __init__.py  daemon.py  led_feedback.py  state.py
src/muteme_btn/hid/: __init__.py  device.py  events.py
src/muteme_btn/input/: __init__.py  key_emitter.py
src/muteme_btn/utils/: __init__.py  logging.py
src/muteme_btn_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_audio_backend_selection.py  test_audio_mocked.py  test_audio_pulse.py  test_cli.py  test_cli_device.py  test_config.py  test_core_daemon.py  test_core_state.py  test_hid_device.py  test_hid_events.py  test_hid_mocked.py  test_integration_e2e.py  test_key_emitter.py  test_led_feedback.py  test_performance.py  test_signal_handling.py  test_utils_logging.py  test_windows_scaffolding.py
