[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muteme-btn-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hidapi>=0.14.0.post4",
    "psutil>=7.1.3",
    "pulsectl>=24.12.0",
    "pydantic>=2.12.4",
    "structlog>=25.5.0",
    "toml>=0.10.2",
    "typer>=0.20.0",
]

[project.scripts]
muteme-btn-control = "muteme_btn.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/muteme_btn"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]
gui = [
    "pyside6>=6.10.0",
]
packaging = [
    "build>=1.3.0",
]
pipewire = [
    "dbus-next>=0.2.3",
]
