[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muteme-btn-control"
version = "0.1.1"
description = "Linux daemon for MuteMe hardware button control with PulseAudio integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hidapi>=0.14.0.post4",
    "psutil>=7.1.3",
    "pulsectl>=24.12.0",
    "pydantic>=2.12.4",
    "structlog>=25.5.0",
    "toml>=0.10.2",
    "typer>=0.20.0",
]

[project.scripts]
muteme-btn-control = "muteme_btn.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/muteme_btn"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
    "bandit[toml]>=1.8.3",
]
gui = [
    "pyside6>=6.10.0",
]
packaging = [
    "build>=1.3.0",
]
pipewire = [
    "dbus-next>=0.2.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["muteme_btn"]

[tool.bandit]
exclude_dirs = ["tests", "htmlcov", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used check (common in tests)

[tool.semantic_release]
# Use annotated tags like v1.2.3
tag_format = "v{version}"
# Allow 0.x.x versions (required for pre-1.0.0 releases)
allow_zero_version = true
# Update the version field in pyproject.toml (single source of truth)
version_toml = ["pyproject.toml:project.version"]
# Ensure uv.lock stays in sync with version changes and is committed
# Install uv in build_command since semantic-release runs in a container without it
build_command = """
curl -LsSf https://astral.sh/uv/install.sh | sh -s
export PATH="$HOME/.local/bin:$PATH"
uv sync --group packaging
uv lock
git add uv.lock
python -m build --wheel --sdist
"""
# Generate changelog and commit version bumps
assets = ["uv.lock"]

[tool.semantic_release.changelog]
# Generate CHANGELOG.md in Markdown
default_templates = { changelog_file = "CHANGELOG.md", output_format = "md" }

[tool.semantic_release.branches]
# Release from the main branch
main = { match = "main" }
